[gd_scene load_steps=8 format=3 uid="uid://ccbx5wqvoau2j"]

[ext_resource type="Script" path="res://world.gd" id="1_10rc7"]
[ext_resource type="PackedScene" uid="uid://dtuxa5jpkaodc" path="res://player_1.tscn" id="1_jnl6c"]
[ext_resource type="PackedScene" uid="uid://c1wa88funoe0d" path="res://ball.tscn" id="2_kxomq"]
[ext_resource type="PackedScene" uid="uid://bx6lye5cisnq3" path="res://player_ai.tscn" id="3_c2rol"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rmo28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1m8bl"]
size = Vector2(1344, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrkbw"]
size = Vector2(32, 720)

[node name="World" type="Node2D"]
script = ExtResource("1_10rc7")

[node name="BaseTop" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_rmo28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseTop"]
position = Vector2(640, -8)
shape = SubResource("RectangleShape2D_1m8bl")

[node name="BaseBottom" type="StaticBody2D" parent="."]
position = Vector2(0, 664)
physics_material_override = SubResource("PhysicsMaterial_rmo28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseBottom"]
position = Vector2(640, 64)
shape = SubResource("RectangleShape2D_1m8bl")

[node name="Ball" parent="." instance=ExtResource("2_kxomq")]
position = Vector2(640, 360)

[node name="Player1" parent="." instance=ExtResource("1_jnl6c")]
position = Vector2(72, 360)

[node name="AI" parent="." instance=ExtResource("3_c2rol")]
position = Vector2(1208, 360)

[node name="LeftWall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-16, 360)
shape = SubResource("RectangleShape2D_xrkbw")

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(1184, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(112, 360)
shape = SubResource("RectangleShape2D_xrkbw")

[node name="PlayerScore" type="Label" parent="."]
offset_left = 232.0
offset_top = 224.0
offset_right = 512.0
offset_bottom = 500.0
theme_override_colors/font_color = Color(1, 1, 1, 0.392157)
theme_override_font_sizes/font_size = 200
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AIScore" type="Label" parent="."]
offset_left = 768.0
offset_top = 224.0
offset_right = 1048.0
offset_bottom = 500.0
theme_override_colors/font_color = Color(1, 1, 1, 0.392157)
theme_override_font_sizes/font_size = 200
text = "0"
vertical_alignment = 1

[connection signal="body_entered" from="LeftWall" to="." method="_on_left_wall_body_entered"]
[connection signal="body_entered" from="RightWall" to="." method="_on_right_wall_body_entered"]
